{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 494,
  "lineage": "ca258d34-1ed8-73f5-d894-1e8a24aa7e74",
  "resources": [
    {
      "module": "module.App-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "App",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e87074e52e6c9f9",
            "arn": "arn:aws:ec2:us-east-1:360748086597:instance/i-08bbe99e39edb2a42",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08bbe99e39edb2a42",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "xwiggy-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0325e21f54bec4b4f",
            "private_dns": "ip-10-0-2-111.ec2.internal",
            "private_ip": "10.0.2.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cedbb07902901c8c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0da7d0edb8480f10f",
            "tags": {
              "Name": "xwiggy-App-1"
            },
            "tags_all": {
              "Name": "xwiggy-App-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c04141db0ba102b4"
            ]
          },
          "dependencies": [
            "module.key-pair.aws_key_pair.keypair",
            "module.xwiggy-security-groups.aws_security_group.vpc-private-security-group",
            "module.xwiggy-vpc.aws_subnet.private_subnet-1",
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.App-2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "App",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e87074e52e6c9f9",
            "arn": "arn:aws:ec2:us-east-1:360748086597:instance/i-092de28ef818ebf89",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-092de28ef818ebf89",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "xwiggy-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f22400db95859a57",
            "private_dns": "ip-10-0-4-111.ec2.internal",
            "private_ip": "10.0.4.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cd073be870491156",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041ee3b7414485715",
            "tags": {
              "Name": "xwiggy-App-2"
            },
            "tags_all": {
              "Name": "xwiggy-App-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c04141db0ba102b4"
            ]
          },
          "dependencies": [
            "module.key-pair.aws_key_pair.keypair",
            "module.xwiggy-security-groups.aws_security_group.vpc-private-security-group",
            "module.xwiggy-vpc.aws_subnet.private_subnet-2",
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.basion-host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "App",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e87074e52e6c9f9",
            "arn": "arn:aws:ec2:us-east-1:360748086597:instance/i-0b9162c39faf686fb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b9162c39faf686fb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "xwiggy-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-081f40cac7bd52b4f",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_ip": "10.0.1.10",
            "public_ip": "50.19.140.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05a83f124c8515eb2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de802ca654e6c622",
            "tags": {
              "Name": "xwiggy-bastion-host"
            },
            "tags_all": {
              "Name": "xwiggy-bastion-host"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07679944b9cb9b4d7"
            ]
          },
          "dependencies": [
            "module.key-pair.aws_key_pair.keypair",
            "module.xwiggy-security-groups.aws_security_group.vpc-public-security-group",
            "module.xwiggy-vpc.aws_subnet.public_subnet-1",
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "xwiggy-lb-logs",
                "enabled": true,
                "prefix": "test-lb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:360748086597:loadbalancer/app/xwiggy-public-lb/e88a1c77c1cae7be",
            "arn_suffix": "app/xwiggy-public-lb/e88a1c77c1cae7be",
            "dns_name": "xwiggy-public-lb-321998922.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:360748086597:loadbalancer/app/xwiggy-public-lb/e88a1c77c1cae7be",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "xwiggy-public-lb",
            "security_groups": [
              "sg-07679944b9cb9b4d7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c2907a0a05d23db4"
              },
              {
                "subnet_id": "subnet-0de802ca654e6c622"
              }
            ],
            "subnets": [
              "subnet-0c2907a0a05d23db4",
              "subnet-0de802ca654e6c622"
            ],
            "tags": {
              "Environment": "production-public-lb"
            },
            "tags_all": {
              "Environment": "production-public-lb"
            },
            "vpc_id": "vpc-0c58d7f5c9b86bc0f",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.public-lb.aws_s3_bucket.lb_access_logs",
            "module.xwiggy-security-groups.aws_security_group.vpc-public-security-group",
            "module.xwiggy-vpc.aws_subnet.public_subnet-1",
            "module.xwiggy-vpc.aws_subnet.public_subnet-2"
          ]
        }
      ]
    },
    {
      "module": "module.web-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e87074e52e6c9f9",
            "arn": "arn:aws:ec2:us-east-1:360748086597:instance/i-0cb2a027696bcd7c2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb2a027696bcd7c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "xwiggy-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00d696ba39b4a7f9b",
            "private_dns": "ip-10-0-2-222.ec2.internal",
            "private_ip": "10.0.2.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08ce3e949e7c26b30",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0da7d0edb8480f10f",
            "tags": {
              "Name": "xwiggy-web-1"
            },
            "tags_all": {
              "Name": "xwiggy-web-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c04141db0ba102b4"
            ]
          },
          "dependencies": [
            "module.xwiggy-security-groups.aws_security_group.vpc-private-security-group",
            "module.xwiggy-vpc.aws_subnet.private_subnet-1",
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web-2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e87074e52e6c9f9",
            "arn": "arn:aws:ec2:us-east-1:360748086597:instance/i-02f57c34fe5d9572a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02f57c34fe5d9572a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "xwiggy-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d6e60a147fd7e8bb",
            "private_dns": "ip-10-0-4-222.ec2.internal",
            "private_ip": "10.0.4.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0485acb40472dcfaf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041ee3b7414485715",
            "tags": {
              "Name": "xwiggy-web-2"
            },
            "tags_all": {
              "Name": "xwiggy-web-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c04141db0ba102b4"
            ]
          },
          "dependencies": [
            "module.xwiggy-security-groups.aws_security_group.vpc-private-security-group",
            "module.xwiggy-vpc.aws_subnet.private_subnet-2",
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-security-groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-private-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360748086597:security-group/sg-0c04141db0ba102b4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c04141db0ba102b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "vpc-traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "xwiggy-private-security-group",
            "name_prefix": "",
            "owner_id": "360748086597",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xwiggy-private"
            },
            "tags_all": {
              "Name": "xwiggy-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c58d7f5c9b86bc0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-security-groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-public-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360748086597:security-group/sg-07679944b9cb9b4d7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07679944b9cb9b4d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "xwiggy-public-security-group",
            "name_prefix": "",
            "owner_id": "360748086597",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xwiggy-public"
            },
            "tags_all": {
              "Name": "xwiggy-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c58d7f5c9b86bc0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-security-groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_inbound-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow https traffic worldwide",
            "from_port": 80,
            "id": "sgrule-1679834450",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07679944b9cb9b4d7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.xwiggy-security-groups.aws_security_group.vpc-public-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-security-groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_inbound-rules_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "157.32.168.5/32"
            ],
            "description": "Srinath",
            "from_port": 22,
            "id": "sgrule-2171817652",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07679944b9cb9b4d7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.xwiggy-security-groups.aws_security_group.vpc-public-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360748086597:route-table/rtb-0d91524e784d20eef",
            "default_route_table_id": "rtb-0d91524e784d20eef",
            "id": "rtb-0d91524e784d20eef",
            "owner_id": "360748086597",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ce364079e726d4e5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xwiggy-public-route-table"
            },
            "tags_all": {
              "Name": "xwiggy-public-route-table"
            },
            "vpc_id": "vpc-0c58d7f5c9b86bc0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.xwiggy-vpc.aws_internet_gateway.vpc_internet_gateway",
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-gateway-elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b0d1e3acc0da8aeb",
            "domain": "vpc",
            "id": "eipalloc-066fa210b6532c408",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0eaa15267a08f1e7f",
            "private_dns": "ip-10-0-1-137.ec2.internal",
            "private_ip": "10.0.1.137",
            "public_dns": "ec2-3-211-97-7.compute-1.amazonaws.com",
            "public_ip": "3.211.97.7",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "xwiggy-ngw-eip"
            },
            "tags_all": {
              "Name": "xwiggy-ngw-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360748086597:internet-gateway/igw-0ce364079e726d4e5",
            "id": "igw-0ce364079e726d4e5",
            "owner_id": "360748086597",
            "tags": {
              "Name": "xwiggy-igw"
            },
            "tags_all": {
              "Name": "xwiggy-igw"
            },
            "vpc_id": "vpc-0c58d7f5c9b86bc0f"
          },
          "dependencies": [
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066fa210b6532c408",
            "connectivity_type": "public",
            "id": "nat-05b3c0ebef647deea",
            "network_interface_id": "eni-0eaa15267a08f1e7f",
            "private_ip": "10.0.1.137",
            "public_ip": "3.211.97.7",
            "subnet_id": "subnet-0de802ca654e6c622",
            "tags": {
              "Name": "xwiggy-ngw"
            },
            "tags_all": {
              "Name": "xwiggy-ngw"
            }
          },
          "dependencies": [
            "module.xwiggy-vpc.aws_eip.nat-gateway-elastic-ip",
            "module.xwiggy-vpc.aws_subnet.public_subnet-1",
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360748086597:route-table/rtb-00b55c880637774de",
            "id": "rtb-00b55c880637774de",
            "owner_id": "360748086597",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-05b3c0ebef647deea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xwiggy-private-route-table"
            },
            "tags_all": {
              "Name": "xwiggy-private-route-table"
            },
            "vpc_id": "vpc-0c58d7f5c9b86bc0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.xwiggy-vpc.aws_nat_gateway.vpc_nat_gateway",
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-table-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c818e23b0f216724",
            "route_table_id": "rtb-00b55c880637774de",
            "subnet_id": "subnet-0da7d0edb8480f10f"
          },
          "dependencies": [
            "module.xwiggy-vpc.aws_route_table.private-route-table",
            "module.xwiggy-vpc.aws_subnet.private_subnet-1",
            "module.xwiggy-vpc.aws_subnet.public_subnet-1",
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc",
            "module.xwiggy-vpc.aws_eip.nat-gateway-elastic-ip",
            "module.xwiggy-vpc.aws_nat_gateway.vpc_nat_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-table-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c85f24379135b6ab",
            "route_table_id": "rtb-00b55c880637774de",
            "subnet_id": "subnet-041ee3b7414485715"
          },
          "dependencies": [
            "module.xwiggy-vpc.aws_nat_gateway.vpc_nat_gateway",
            "module.xwiggy-vpc.aws_route_table.private-route-table",
            "module.xwiggy-vpc.aws_subnet.private_subnet-2",
            "module.xwiggy-vpc.aws_subnet.public_subnet-1",
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc",
            "module.xwiggy-vpc.aws_eip.nat-gateway-elastic-ip"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-table-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea88675959e87ac1",
            "route_table_id": "rtb-0d91524e784d20eef",
            "subnet_id": "subnet-0de802ca654e6c622"
          },
          "dependencies": [
            "module.xwiggy-vpc.aws_default_route_table.public-route-table",
            "module.xwiggy-vpc.aws_internet_gateway.vpc_internet_gateway",
            "module.xwiggy-vpc.aws_subnet.public_subnet-1",
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-table-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eaa9fed9cee389a8",
            "route_table_id": "rtb-0d91524e784d20eef",
            "subnet_id": "subnet-0c2907a0a05d23db4"
          },
          "dependencies": [
            "module.xwiggy-vpc.aws_default_route_table.public-route-table",
            "module.xwiggy-vpc.aws_internet_gateway.vpc_internet_gateway",
            "module.xwiggy-vpc.aws_subnet.public_subnet-2",
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360748086597:subnet/subnet-0da7d0edb8480f10f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0da7d0edb8480f10f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "360748086597",
            "tags": {
              "Name": "xwiggy-private-subnet-1"
            },
            "tags_all": {
              "Name": "xwiggy-private-subnet-1"
            },
            "vpc_id": "vpc-0c58d7f5c9b86bc0f"
          },
          "dependencies": [
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360748086597:subnet/subnet-041ee3b7414485715",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-041ee3b7414485715",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "360748086597",
            "tags": {
              "Name": "xwiggy-private-subnet-2"
            },
            "tags_all": {
              "Name": "xwiggy-private-subnet-2"
            },
            "vpc_id": "vpc-0c58d7f5c9b86bc0f"
          },
          "dependencies": [
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360748086597:subnet/subnet-0de802ca654e6c622",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0de802ca654e6c622",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "360748086597",
            "tags": {
              "Name": "xwiggy-public-subnet-1"
            },
            "tags_all": {
              "Name": "xwiggy-public-subnet-1"
            },
            "vpc_id": "vpc-0c58d7f5c9b86bc0f"
          },
          "dependencies": [
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360748086597:subnet/subnet-0c2907a0a05d23db4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0c2907a0a05d23db4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "360748086597",
            "tags": {
              "Name": "xwiggy-public-subnet-2"
            },
            "tags_all": {
              "Name": "xwiggy-public-subnet-2"
            },
            "vpc_id": "vpc-0c58d7f5c9b86bc0f"
          },
          "dependencies": [
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "xwiggy_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360748086597:vpc/vpc-0c58d7f5c9b86bc0f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0500bedbe5d6f5949",
            "default_route_table_id": "rtb-0d91524e784d20eef",
            "default_security_group_id": "sg-0f84c28e23b322c94",
            "dhcp_options_id": "dopt-088ffe1eb87d04298",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c58d7f5c9b86bc0f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d91524e784d20eef",
            "owner_id": "360748086597",
            "tags": {
              "Name": "xwiggy-vpc"
            },
            "tags_all": {
              "Name": "xwiggy-vpc"
            }
          }
        }
      ]
    }
  ]
}